# mcp

./: .gitignore  README.md  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
src/mcp_app/: __init__.py
