[project]
name = "mcp-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erielcio Imamura", email = "erielcio00@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.0,<2.0.0",
    "mcp[cli]>=1.1.0,<2.0.0",
]

[project.scripts]
mcp = "mcp_app:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
